# db

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLATFORM_REPORT.md  README.md  brand-preview.html  dp-themes.html  mockup.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONCURRENCY.md  SECURITY.md  design-branch-warehousing.md
frontend/: .npmrc  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
frontend/e2e/: smoke.spec.ts
frontend/src/: AgentSidebar.jsx  AgentSidebar.test.jsx  App.jsx  AuthContext.tsx  ChartPanel.jsx  ConnectorsPanel.jsx  DAGPanel.jsx  DataSourcesPanel.jsx  DiffPanel.jsx  DocsPanel.jsx  Editor.jsx  EnvironmentSwitcher.jsx  ErrorBoundary.jsx  FileTree.jsx  GuideTour.jsx  Hint.jsx  HintSystem.jsx  HintSystem.test.jsx  HistoryPanel.jsx  ImportPanel.jsx  LoginPage.jsx  MaskingPanel.jsx  ModelNotebookView.jsx  NewModelDialog.jsx  NotebookPanel.jsx  OutputPanel.jsx  OverviewPanel.jsx  PipelineContext.tsx  QualityPanel.jsx  QueryPanel.jsx  ResizeHandle.jsx  RunSummary.jsx  SentinelPanel.jsx  SettingsPanel.jsx  SortableTable.jsx  TablesPanel.jsx  ThemeProvider.jsx  WarehouseContext.tsx  WikiPanel.jsx  api.js  (+5 more)
proposals/: IMPROVEMENT-PROPOSALS.md  ui-mockup-query-panel-redesign.html
src/dp/: __init__.py  cli.py  config.py  templates.py
src/dp/cli/: __init__.py  admin.py  connectors.py  diff.py  masking.py  models.py  pipeline.py  project.py  quality.py  query.py  rewind.py  sentinel.py  version.py
src/dp/connectors/: __init__.py  csv_file.py  google_sheets.py  hubspot.py  mysql.py  postgres.py  rest_api.py  s3_gcs.py  shopify.py  stripe.py  webhook.py
src/dp/engine/: alerts.py  auth.py  cdc.py  ci.py  collaboration.py  connector.py  contracts.py  database.py  diff.py  docs.py  importer.py  notebook.py  (+11 more)
src/havn/: __init__.py  config.py  templates.py
tests/: test_agent.py  test_alerts.py  test_api.py  test_assertions.py  test_auth.py  test_cdc.py  test_collaboration.py  test_config.py  test_connector.py  test_connector_api.py  test_contracts.py  test_diff.py  test_docs.py  test_environments.py  test_five_features.py  test_importer.py  test_incremental.py  test_incremental_merge.py  test_integration.py  test_lineage.py  test_masking.py  test_new_features.py  test_notebook.py  test_notebook_cells.py  test_notebook_outputs.py  test_notebook_promote.py  test_notebook_runner.py  test_notebook_security.py  test_parallel.py  test_pipeline_integration.py  test_profiling.py  test_runner.py  test_scheduler.py  test_secrets.py  test_sentinel.py  test_snapshots.py  test_sql_analysis.py  test_transform.py  test_validation.py  test_versioning.py
(+163 files in other folders)
